# hermes-council

./: LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-11-implementation-plan.md  2026-03-11-mcp-server-design.md
examples/: ouroboros.yaml  ouroboros_env.py
skills/council/: DESCRIPTION.md
skills/council/adversarial-critique/: SKILL.md
skills/council/bayesian-synthesis/: SKILL.md
skills/council/multi-perspective-analysis/: SKILL.md
src/hermes_council/: __init__.py  audit.py  cli.py  client.py  deliberation.py  evidence.py  parsing.py  personas.py  schemas.py  server.py
src/hermes_council/rl/: __init__.py  evaluator.py
tests/: test_audit.py  test_cli.py  test_client.py  test_deliberation.py  test_evaluator.py  test_evidence.py  test_mcp_runtime.py  test_parsing.py  test_personas.py  test_schemas.py  test_server.py
