[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-council"
version = "0.1.0"
description = "Adversarial multi-perspective council MCP server for hermes-agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ridwan Nurudeen"}]
keywords = ["mcp", "hermes-agent", "adversarial", "deliberation", "council", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.2.0",
    "openai>=1.6.0",
    "pydantic>=2.0",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/Ridwannurudeen/hermes-council"
Repository = "https://github.com/Ridwannurudeen/hermes-council"
Issues = "https://github.com/Ridwannurudeen/hermes-council/issues"

[project.optional-dependencies]
rl = ["openai>=1.6.0", "pyyaml", "pydantic>=2.0"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff"]

[project.scripts]
hermes-council-server = "hermes_council.server:main"
hermes-council = "hermes_council.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/hermes-council/skills/council" = ["skills/council/DESCRIPTION.md"]
"share/hermes-council/skills/council/adversarial-critique" = ["skills/council/adversarial-critique/SKILL.md"]
"share/hermes-council/skills/council/bayesian-synthesis" = ["skills/council/bayesian-synthesis/SKILL.md"]
"share/hermes-council/skills/council/multi-perspective-analysis" = ["skills/council/multi-perspective-analysis/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
